Prevent app content overflowing its div

--- a/ui/src/app.scss
+++ b/ui/src/app.scss
@@ -5,7 +5,7 @@
 #app-container {
   display: flex;
   justify-content: center;
-  height: 100vh;
+  min-height: 100vh;
   overflow-y: auto;
   scrollbar-gutter: stable both-edges;
 
